# heol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  cliff.toml  heol.toml.example
.github/ISSUE_TEMPLATE/: default.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  curve.rs  lib.rs  light.rs  main.rs  scheduler.rs  solar.rs  zone.rs
src/backend/: deconz.rs  gpio.rs  mod.rs
tests/: backend_dryrun.rs  config_env.rs  config_parsing.rs  config_validation.rs  curve.rs  deconz_payloads.rs  gpio_protocol.rs  gpio_reconnect.rs  light.rs  scheduler.rs  solar.rs  zone.rs
tests/fixtures/: full.toml  minimal.toml
